json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000026.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000026.json
---
Err(
    ExpectedTokenError {
        expected: [
            Eof,
        ],
        actual: Illegal,
        origin: "\u{7f}",
        row: 1,
        column: 1012,
    },
)
