json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000028.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000028.json
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBracket,
        ],
        actual: Illegal,
        origin: "\u{15}",
        row: 1,
        column: 73,
    },
)
