json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000029.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000029.json
---
Err(
    ExpectedTokenError {
        expected: [
            Number,
        ],
        actual: Illegal(
            Some(
                Number(
                    ParseFloatError,
                ),
            ),
        ),
        invalid_row: 1,
        invalid_col: 1,
    },
)
