json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000030.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000030.json
---
Ok(
    Object(
        [
            JsonProperty {
                key: "Neh",
                value: Number(
                    -3.333333333333333e29,
                ),
            },
        ],
    ),
)
