json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000031.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000031.json
snapshot_kind: text
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBracket,
        ],
        actual: Illegal,
        origin: "p",
        row: 1,
        column: 125,
    },
)
