json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000033.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000033.json
---
Err(
    ExpectedTokenError {
        expected: [
            Number,
        ],
        actual: Illegal,
        origin: "28033333333333333333333333333333333348253421170679.6170-",
        row: 1,
        column: 60,
    },
)
